<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:background="@color/background_login"
    tools:context="com.tecnologiasintech.geebsoftapp.ResetPasswordActivity"
    android:id="@+id/activity_reset_password"
    >


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout">


        <!--<ImageView-->
            <!--android:layout_width="@dimen/logo_w_h"-->
            <!--android:layout_height="@dimen/logo_w_h"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:src="@mipmap/ic_launcher" />-->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:paddingTop="50dp"
            android:text="@string/lbl_forgot_password"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"

            android:textSize="15dp"
            android:textColor="#ffffff" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:layout_marginRight="@dimen/margin_left_right_login_form"
                android:layout_marginLeft="@dimen/margin_left_right_login_form"
                android:paddingLeft="@dimen/padding_editText_form"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/heigh_button_form"
            android:layout_marginTop="@dimen/margin_top_login_form"
            android:text="@string/btn_reset_password"
            android:background="@drawable/background_button_sign"
            android:layout_marginLeft="@dimen/margin_left_right_login_form"
            android:layout_marginRight="@dimen/margin_left_right_login_form"
            android:textSize="14sp"
            android:textColor="@android:color/white" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
