<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.tecnologiasintech.geebsoftapp.SignUpActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background_login"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/SignUpUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SignUpUserName"
                android:inputType="textEmailAddress"
                android:layout_marginRight="@dimen/margin_left_right_login_form"
                android:layout_marginLeft="@dimen/margin_left_right_login_form"
                android:paddingLeft="@dimen/padding_editText_form"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/SignUpemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_left_right_login_form"
                android:layout_marginLeft="@dimen/margin_left_right_login_form"
                android:layout_marginTop="@dimen/margin_top_login_form"
                android:paddingLeft="@dimen/padding_editText_form"
                android:hint="@string/email_SignUp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/SignUppassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:layout_marginRight="@dimen/margin_left_right_login_form"
                android:layout_marginLeft="@dimen/margin_left_right_login_form"
                android:layout_marginTop="@dimen/margin_top_login_form"
                android:paddingLeft="@dimen/padding_editText_form"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heigh_button_form"
            android:layout_marginRight="@dimen/margin_left_right_login_form"
            android:layout_marginLeft="@dimen/margin_left_right_login_form"
            android:layout_marginTop="@dimen/margin_top_login_form"
            android:text="@string/action_sign_in_short"
            android:textColor="#e9f4ff"
            android:background="@drawable/background_button_sign" />

        <!-- Link to Login Screen -->

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>