<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.tecnologiasintech.geebsoftapp.SignInActivity"
    android:background="@color/background_login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_and_restore_password_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:layout_marginLeft="@dimen/margin_left_right_login_form"
                        android:layout_marginRight="@dimen/margin_left_right_login_form"
                        android:paddingLeft="@dimen/padding_editText_form"
                        android:textColor="#e9f4ff"
                        android:textColorHint="#e9f4ff"
                        android:layout_marginTop="50dp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginRight="@dimen/margin_left_right_login_form"
                        android:layout_marginLeft="@dimen/margin_left_right_login_form"
                        android:layout_marginTop="@dimen/margin_top_login_form"
                        android:paddingLeft="@dimen/padding_editText_form"
                        android:textColor="#e9f4ff"
                        android:textColorHint="#e9f4ff" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigh_button_form"
                    android:text="@string/action_sign_in"
                    android:layout_marginLeft="@dimen/margin_left_right_login_form"
                    android:layout_marginRight="@dimen/margin_left_right_login_form"
                    android:layout_marginTop="@dimen/margin_top_login_form"
                    android:textSize="15sp"
                    android:textColor="#e9f4ff"
                    android:background="@drawable/background_button_sign" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/restore_password_signup">

                <Button
                    android:id="@+id/txtViewResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigh_button_form"
                    android:layout_marginTop="20dip"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:layout_marginRight="@dimen/margin_left_right_login_form"
                    android:layout_marginLeft="@dimen/margin_left_right_login_form"
                    android:textColor="#e9f4ff"
                    android:textSize="15sp"
                    android:background="?android:attr/selectableItemBackground" />

            </LinearLayout>


            <!-- Link to Login Screen -->


            <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/facebook_sign_in_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.69"/>-->
        </LinearLayout>




    </ScrollView>

</LinearLayout>